# cdi-alert-engine

./: .dockerignore  .luarc.json  1q  Cargo.toml  Dockerfile  Jenkinsfile  README.md  change_scripts.lua  change_scripts.toml  config.lua  config.toml  dolbeyadmin-combined.crt  license.rtf  remove  test.lua
cdi-alert-server/: Cargo.toml
cdi-alert-server/src/: lib.rs  main.rs
doc/: cdi-alert-engine-motivations.md
examples/: alert.json
libs/: README.md  common.lua  standard_cdi.lua  userdata_types.lua
libs/common/: alerts.lua  basic_links.lua  blood.lua  codes.lua  dates.lua  discrete_values.lua  documents.lua  headers.lua  lists.lua  medications.lua
libs/meta/: globals.lua  log.lua  userdata_types.lua
old-scripts/: acidosis.lua  anemia.lua  bleeding.lua  cerebral_edema_and_brain_compression.lua  coagulopathy.lua  copd.lua  functional_quadriplegia.lua  heart_failure.lua  hypertensive_crisis.lua  immunocompromised.lua  malnutrition.lua  nicotine_dependence_with_withdrawal.lua  pancytopenia.lua  pneumonia.lua  pressure_ulcer.lua  pulmonary_edema.lua  pulmonary_embolism.lua  respiratory_failure.lua  rhabdomylosis_elevated_ck.lua  sepsis_sirs.lua  severe_sepsis.lua  shock.lua  stroke.lua
scripts/: abnormal_serum.lua  abnormal_serum_calcium.lua  abnormal_serum_potassium.lua  abnormal_serum_sodium.lua  acidosis.lua  acute_mi_troponemia.lua  anemia.lua  atrial_fibrillation.lua  bleeding.lua  cerebral_edema_and_brain_compression.lua  coagulopathy.lua  copd.lua  diabetes_ketoacidosis_hyperosmolarity_coma.lua  encephalopathy.lua  functional_quadriplegia.lua  heart_failure.lua  hypertensive_crisis.lua  immunocompromised.lua  kidney_failure.lua  malnutrition.lua  morbid_obesity.lua  nicotine_dependence_with_withdrawal.lua  pancytopenia.lua  pneumonia.lua  pressure_ulcer.lua  pulmonary_edema.lua  pulmonary_embolism.lua  respiratory_failure.lua  rhabdomylosis_elevated_ck.lua  rhabdomyolysis.lua  script.lua  sepsis_sirs.lua  severe_sepsis.lua  shock.lua  stroke.lua  substance_abuse.lua  test.lua  test2.lua  urinary_tract_infection.lua
scripts/python/: AbnormalSerumPotassium.py  AbnormalSerumSodium.py  Acidosis.py  AcuteMI-Troponemia.py  Anemia.py  AtrialFibrillation.py  Bleeding.py  COPD.py  CerebralEdemaAndBrainCompression.py  Coagulopathy.py  DiabetesKetoacidosisHyperosmolarityComa.py  Encephalopathy.py  FunctionalQuadriplegia.py  HeartFailure.py  HypertensiveCrisis.py  Immunocompromised.py  KidneyFailure.py  Malnutrition.py  MorbidObesity.py  NicotineDependenceWithWithdrawal.py  Pancytopenia.py  Pneumonia.py  PressureUlcer.py  PulmonaryEdema.py  PulmonaryEmbolism.py  RespiratoryFailure.py  Rhabdomyolysis-ElevatedCK.py  SevereSepsis(Sepsis2).py  Shock.py  Stroke.py  SubstanceAbuse.py  UrinaryTractInfection.py  sepsis-SIRS.py
src/: cac_data.rs  cdi_alerts.rs  config.rs  lib.rs  main.rs
test/: README.md  identity.lua
test/abnormal_serum_potassium/: hyperkalemia.lua  hyperkalemia_autoresolve.lua  hyperkalemia_lacking_evidence.lua  hyperkalemia_lacking_evidence_autoresolve.lua  hypokalemia.lua  hypokalemia_autoresolve.lua  hypokalemia_lacking_evidence.lua  hypokalemia_lacking_evidence_autoresolve.lua
test/atrial_fibrillation/: autoresolve.lua  conflicting.lua  previous_autoresolve.lua  unspecified.lua
test/bleeding/: anticoagulant.lua  autoresolve.lua
test/coagulopathy/: autoresolve.lua  possible.lua
test/functional_quadriplegia/: autoresolve.lua  autoresolve_lacking_evidence.lua  lacking_evidence.lua  possible.lua  possible_conflicting.lua
test/immunocompromised/: autoresolve.lua  chronic.lua  chronic_medication.lua  medication.lua  possible.lua
test/nicotine_dependence_with_withdrawal/: autoclose.lua  autoresolve.lua  present.lua
test/rhabdomyolysis/: autoresolve_lacking_evidence.lua  autoresolve_possible.lua  conflicting.lua  conflicting_previously_autoresolved.lua  lacking_evidence.lua  possible.lua
test/substance_abuse/: alcohol_autoresolve.lua  ciwa_dv.lua  methadone.lua  opioid_autoresolve.lua
test/urinary_tract_infection/: autoresolve.lua  uti_possible_cystostomy_catheter.lua  uti_possible_indwelling_catheter.lua  uti_possible_intermittent_catheterization.lua  uti_possible_nephrostomy_catheter.lua  uti_possible_other_urinary_drainage.lua  uti_possible_ureteral_stent.lua
wix/: config.lua  config.toml  main.wxs
