[package]
name = "cdi-alert-engine"
description = "Fusion CDI Alert Engine"
authors = ["Evie Bennett <ebennett@dolbey.com>", "Mike Lambert <mlambert@dolbey.com>"]
version = "0.1.2"
edition = "2021"
license-file = "license.rtf"

[dependencies]
alua = { version = "0.2.0", features = ["userdata"] }
bson = { version = "2.9.0", features = ["serde_with-3"] }
mlua = { version = "0.10.1", features = ["error-send", "luajit", "macros", "userdata-wrappers"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_with = "3.7.0"
tracing = { version = "0.1.40" }

anyhow = { version = "1.0.93", optional = true }
clap = { version = "4.5.4", features = ["derive"] , optional = true }
colored = { version = "3.0.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[dependencies.fae-ghost]
git = "ssh://git@github.com/dolbeysystems/fae-ghost"
rev = "9b62c73"
default-features = false
features = ["luajit"]
optional = true

[features]
default = ["test"]
test = ["dep:anyhow", "dep:clap", "dep:colored", "dep:tracing-subscriber", "dep:fae-ghost"]

[workspace]
members = ["cdi-alert-server"]

[workspace.dependencies.cdi-alert-engine]
path = "."
# Remove dependencies of test harness.
default-features = false
