[package]
name = "cdi-alert-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.4", features = ["derive"] }
mlua = { version = "0.10.1", features = ["async", "luajit", "macros", "serialize", "vendored"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_with = "3.7.0"
mongodb = "3.1.0"
thiserror = "2.0.3"
derive_environment = "1.1.0"
reqwest = { version = "0.12.4", features = ["rustls-tls"], default-features = false }
cdi-alert-engine.workspace = true
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
